<resources>
    <string name="app_name">eTicket</string>
    <string name="slogan">Ο ευκολότερος τρόπος να κλείσεις εισιτήρια!\nΒρες όλα τα διαθέσιμα δρομολόγια με ένα κλικ.</string>
    <string name="logoText">ΚΤΕΛ e-ΛΕΙΑΣ</string>
    <string name="registerImage">Register Image</string>
    <string name="signUp">Εγγραφη</string>
    <string name="signIn">Συνδεση</string>
    <string name="nameText">Εισάγετε το Ονομά σας</string>
    <string name="emailText">Εισάγετε το Email σας</string>
    <string name="passwordText">Εισάγετε τον κωδικό σας</string>
    <string name="confirmPasswordText">Επανάληψη κωδικού</string>
    <string name="ticketImage">Ticket Image</string>
    <string name="login">Σύνδεση</string>
    <string name="credentials">Εισάγετε τα στοιχεία σας</string>
    <string name="search">ΑΝΑΖΗΤΗΣΗ</string>
    <string name="driver">Οδηγός</string>
    <string name="kleiseThesi">Κλείσε Θέση</string>
    <string name="ekptwsi">Επιλογή Έκπτωσης</string>
    <string-array name="apo">
        <item>ΑΠΟ</item>
    </string-array>
    <string-array name="pros">
        <item>ΠΡΟΣ</item>
    </string-array>
    <string-array name="wra">
        <item>ΩΡΑ</item>
    </string-array>
    <string-array name="meEkptwsi">
        <item>0</item>
    </string-array>
    <string-array name="ekptwseisList">
        <item>Χωρίς Έκπτωση</item>
        <item>Φοιτητικό -25%</item>
        <item>Φοιτητικό -50%</item>
        <item>Πολύτεκνο -25%</item>
        <item>Στρατιωτικό -25%</item>
    </string-array>
    <string-array name="languages">
        <item>Ελληνικά</item>
        <item>English</item>
    </string-array>
    <string name="poso">Συνολικό Ποσό:</string>
    <string name="pay">Πληρωσε</string>
    <string name="arithmosMeEkptwsi">Αριθμός εισιτηρίων με έκπτωση:</string>
    <string name="name">Όνομα:</string>
    <string name="email">Email:</string>
    <string name="ktel_ileias">ΚΤΕΛ ΗΛΕΙΑΣ</string>
    <string name="dieythinsi1">Ερυθρού Σταυρού 6</string>
    <string name="dieythinsi2">Πύργος 27131</string>
    <string name="tilefwno">30 26210 20600</string>
    <string name="email_ktel">ktelias@otenet.gr</string>
    <string name="my_Profile">My Profile</string>
    <string name="about_us">About Us</string>
    <string name="fingerprintTitle">Θέλετε να συνδεθείτε με το δακτυλικό σας αποτύπωμα;</string>
    <string name="fingerprintMessage">Πατήστε όχι για να συνδεθείτε με τα στοιχεία σας.</string>
    <string name="nai">Ναι</string>
    <string name="oxi">Οχι</string>
    <string name="authProblem">Πρόβλημα πιστοποίησης!</string>
    <string name="authOk">Η πιστοποίηση ολοκληρώθηκε!</string>
    <string name="authFailed">Η πιστοποίηση απέτυχε!</string>
    <string name="biometricAuth">Βιομετρική Πιστοποιηση</string>
    <string name="biometricTitle">Συνδεθείτε χρησιμοποιώντας το δακτυλικό σας αποτύπωμα</string>
    <string name="biometricNo">Κωδικός Εφαρμογής</string>
    <string name="dromologiaUser">TA ΔΡΟΜΟΛΟΓΙΑ MOY</string>
    <string name="onomaUser">Παρακαλώ πληκτρολογήστε το όνομά σας.</string>
    <string name="wrongEmailToast">Παρακαλώ πληκτρολογήστε σωστά το email σας.</string>
    <string name="wrongPasswordToast">Παρακαλώ πληκτρολογήστε το password σας.</string>
    <string name="confPasswordUser">Παρακαλώ πληκτρολογήστε ξανά το password σας.</string>
    <string name="passwordsNotTheSame">Οι κωδικοί που πληκτρολογήσατε δεν είναι ίδιοι.</string>
    <string name="epitixisEgrafi">"Η εγγραφή ολοκληρώθηκε.</string>
    <string name="apotixiaEgrafis">Η Πιστοποιηση επέτυχε</string>
    <string name="lathosMegethosKwdikou">Το μέγεθος του κωδικού πρέπει να είναι τουλάχιστον 6.</string>
    <string name="epitixisSindesi">Επιτυχής σύνδεση!</string>
    <string name="sindesiApetixe">Η σύνδεση απέτυχε! Παρακαλώ εισάγεται ξανά τα στοιχεία σας.</string>
    <string name="epilogiAfetirias">Παρακαλώ επιλέξτε αφετηρία.</string>
    <string name="epilogiProorismou">Παρακαλώ επιλέξτε προορισμό.</string>
    <string name="epilogiOras">Παρακαλώ επιλέξτε ώρα.</string>
    <string name="apo">ΑΠΟ</string>
    <string name="pros">ΠΡΟΣ</string>
    <string name="wra">ΩΡΑ</string>
    <string name="ipenthimisi">Υπενθύμιση!</string>
    <string name="toDromologio">Το δρομολόγιο </string>
    <string name="xekinaei"> θα ξεκινήσει σε </string>
    <string name="metavasiStoXoro"> λεπτά. Παρακαλώ μεταβείτε στον χώρο αναχώρησης!</string>
    <string name="kanenaDromologio">Δεν έχετε κλείσει κανένα δρομολόγιο.</string>
    <string name="selectSeats">Παρακαλώ επέλεξε μια ή περισσότερες θέσεις.</string>
    <string name="qrCode">Το QR code του εισιτηρίου σας.</string>
    <string name="sunolikoPoso">Συνολικό ποσό: </string>
    <string name="oloklirosiPliromis">Πληρωμή ολοκληρώθηκε!</string>
    <string name="kratisiDromologiou">Η κράτηση σας για το δρομολόγιο</string>
    <string name="epitixisDimiourgia"> δημιουργήθηκε επιτυχώς.</string>
    <string name="apotixiaPliromis">Αποτυχία πληρωμής</string>
    <string name="allagiKodikou">Αλλαγή Κωδικού</string>
    <string name="epanaforaKodikou">Επαναφορά Κωδικού</string>
    <string name="aposindesi">Αποσύνδεση</string>
    <string name="resetPasswordEmail">Το email επαναφοράς κωδικού στάλθηκε επιτυχώς.</string>
    <string name="resetPassword">Επαναφορά Κωδικού</string>
    <string name="emailConfirmation">Επιβεβαίωση Email</string>
    <string name="emailAlreadyConfirmed">Έχετε ήδη επιβεβαιώσει το email σας.</string>
    <string name="confirmationEmailSent">Το email επιβεβαίωσης στάλθηκε επιτυχώς.</string>
    <string name="emailConfirmed">Το email σας επιβεβαιώθηκε επιτυχώς.</string>
    <string name="newPassword">Καινούριος κωδικός</string>
    <string name="allagiPassword">Ο κωδικός σας τροποποιήθηκε επιτυχώς.</string>
    <string name="errorAllagiPassword">Ο κωδικός δεν τροποποιήθηκε.</string>
    <string name="lathosStoixeia">Λάθος στοιχεία.</string>
    <string name="emailDenExeiEpiveveothei">Το email σας δεν έχει επιβεβαιωθεί. Παρακαλώ ελέγξτε τα email σας.</string>
</resources>