<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AD6F5"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SignUpActivity">

    <!-- TextView for heading -->
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginTop="-100dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/registerImage"
        app:srcCompat="@drawable/register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/credentials"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/nameText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/emailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/passwordText"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/confirmPasswordText"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


    <!-- Button for Login with text "Login" -->
    <info.hoang8f.widget.FButton
        android:id="@+id/signUp"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:shadowColor="@android:color/black"
        android:text="@string/signUp"
        android:textColor="@android:color/white"
        app:cornerRadius="20dp"
        app:fButtonColor="@color/btnSignActive"
        app:shadowEnabled="true"
        app:shadowHeight="5dp" />

    <!-- ProgressBar for Loading Time -->

</LinearLayout>