<?xml version="1.0" encoding="utf-8"?>
<!-- Linear Layout with vertical orientation and other properties -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6AD6F5"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".EditCredentialsActivity">

    <!-- TextView for heading -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="-100dp"
        android:contentDescription="@string/ticketImage"
        android:rotation="15"
        app:srcCompat="@drawable/ticket" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/credentials"
        android:textSize="18sp" />

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email_edit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/emailText"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/edit_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/passwordText"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/newPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <info.hoang8f.widget.FButton
        android:id="@+id/editCredentialsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/allagiStoixeiwn"
        android:textColor="#FFFFFF"
        app:cornerRadius="20dp"
        app:fButtonColor="@color/btnSignUp" />

</LinearLayout>
