<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus"
    tools:context=".MainActivity">

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/languageSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/layout_corners_shape"
        android:backgroundTint="#009688"
        android:gravity="center"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textSize="14.5sp"
        app:spinner_arrow_gravity="end"
        app:spinner_divider_color="@color/black"
        app:spinner_divider_show="true"
        app:spinner_divider_size="0.4dp"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_elevation="14dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLogo"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/abril_fatface"
            android:gravity="center"
            android:text="@string/logoText"
            android:textColor="@android:color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtSlogan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/abril_fatface"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:shadowColor="@android:color/black"
            android:text="@string/signUp"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:fButtonColor="@color/btnSignUp"
            app:shadowEnabled="false" />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:shadowColor="@android:color/black"
            android:text="@string/signIn"
            android:textColor="@android:color/white"
            app:cornerRadius="8dp"
            app:fButtonColor="@color/btnSignActive"
            app:shadowEnabled="false"
            app:shadowHeight="5dp" />
    </LinearLayout>

</RelativeLayout>